WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150803
Suppress deprecated-declarations warning in WebCore/platform/URL.cpp
https://bugs.webkit.org/show_bug.cgi?id=150803
Summary
Suppress deprecated-declarations warning in WebCore/platform/URL.cpp
Csaba Osztrogonác
Reported
2015-11-02 06:57:00 PST
/home/ossy/WebKit/Source/WebCore/platform/URL.cpp: In function ‘void WebCore::appendEncodedHostname(WebCore::UCharBu ffer&, WTF::StringView)’: /home/ossy/WebKit/Source/WebCore/platform/URL.cpp:1697:64: warning: ‘int32_t uidna_IDNToASCII_55(const UChar*, int32_t, UChar*, int32_t, int32_t, UParseError*, UErrorCode*)’ is deprecated [-Wdeprecated-declarations] hostnameBufferLength, UIDNA_ALLOW_UNASSIGNED, 0, &error); ^ In file included from /usr/include/x86_64-linux-gnu/unicode/platform.h:23:0, from /usr/include/x86_64-linux-gnu/unicode/ptypes.h:50, from /usr/include/x86_64-linux-gnu/unicode/umachine.h:44, from /usr/include/x86_64-linux-gnu/unicode/utypes.h:36, from /home/ossy/WebKit/Source/WTF/wtf/text/ASCIIFastPath.h:26, from /home/ossy/WebKit/Source/WTF/wtf/text/WTFString.h:28, from /home/ossy/WebKit/Source/WebCore/platform/URL.h:33, from /home/ossy/WebKit/Source/WebCore/platform/URL.cpp:28: /usr/include/x86_64-linux-gnu/unicode/uidna.h:673:1: note: declared here uidna_IDNToASCII( const UChar* src, int32_t srcLength, ^ Fortunately it doesn't cause build failure, but it should be fixed in the near future.
Attachments
Patch
(1.58 KB, patch)
2015-11-05 05:31 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-11-05 05:31:38 PST
Created
attachment 264857
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-06 05:08:28 PST
Comment on
attachment 264857
[details]
Patch Clearing flags on attachment: 264857 Committed
r192100
: <
http://trac.webkit.org/changeset/192100
>
WebKit Commit Bot
Comment 3
2015-11-06 05:08:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug