Suppress deprecated-declarations warning in WebCore/platform/URL.cpp https://bugs.webkit.org/show_bug.cgi?id=150803

Reviewed by Alexey Proskuryakov.

* platform/URL.cpp:
(WebCore::appendEncodedHostname):


Canonical link: https://commits.webkit.org/169182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192100 268f45cc-cd09-0410-ab3c-d52691b4dbfc